// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App /> mocks an event where the final key is NOT enter, should change timer time prop 1`] = `
<div>
  <h1>
    hello world
  </h1>
  <input
    onKeyPress={[Function]}
    type="text"
  />
  <Timer
    time={1}
  />
</div>
`;

exports[`<App /> mocks an event where the final key is enter, should change timer time prop 1`] = `
<div>
  <h1>
    hello world
  </h1>
  <input
    onKeyPress={[Function]}
    type="text"
  />
  <Timer
    time="10000"
  />
</div>
`;

exports[`<App /> should match snapshot 1`] = `
<div>
  <h1>
    hello world
  </h1>
  <input
    onKeyPress={[Function]}
    type="text"
  />
  <Timer
    time={1}
  />
</div>
`;
